# sov

./: .clang-format  .gitignore  LICENSE  README.md  config  makefile  meson.build
.github/workflows/: c.yml
contrib/systemd/: sov.service  sov.socket
include/: buffer.h  color.h  log.h  parse.h  pledge.h
res/html/: main.css
src/: log.c  main.c
src/kinetic_ui/: ku_bitmap.c  ku_connector_wayland.c  ku_css.c  ku_draw.c  ku_event.c  ku_fontconfig.c  ku_gen_css.c  ku_gen_html.c  ku_gen_textstyle.c  ku_gen_type.c  ku_html.c  ku_png.c  ku_recorder.c  ku_rect.c  ku_renderer_egl.c  ku_renderer_soft.c  ku_text.c  ku_view.c  ku_window.c
src/kinetic_ui/egl/: ku_gl.c  ku_gl_atlas.c  ku_gl_floatbuffer.c  ku_gl_shader.c
src/kinetic_ui/handler/: vh_anim.c  vh_button.c  vh_cv_body.c  vh_cv_evnt.c  vh_cv_scrl.c  vh_drag.c  vh_key.c  vh_knob.c  vh_roll.c  vh_slider.c  vh_table.c  vh_tbl_body.c  vh_tbl_evnt.c  vh_tbl_head.c  vh_tbl_scrl.c  vh_textinput.c  vh_touch.c
src/kinetic_ui/texture/: tg_css.c  tg_knob.c  tg_scaledimg.c  tg_text.c
src/modules/json/: json.c
src/modules/storage/: kvlines.c
src/modules/zen_core/: zc_channel.c  zc_cstring.c  zc_cstrpath.c  zc_graphics.c  zc_log.c  zc_memory.c  zc_string.c  zc_vector.c  zc_wrapper.c
src/modules/zen_text/: text.c
src/mt_core/: mt_channel.c  mt_log.c  mt_map.c  mt_memory.c  mt_number.c  mt_path.c  mt_string.c  mt_time.c  mt_vector.c  mt_wrapper.c
src/mt_core_ext/: mt_map_ext.c  mt_string_ext.c
src/mt_core_test/: mt_channel_test.c  mt_core_test.c  mt_map_test.c  mt_memory_test.c  mt_path_test.c  mt_string_test.c  mt_vector_test.c
src/mt_math/: mt_math_2d.c  mt_math_3d.c  mt_matrix_3d.c  mt_matrix_4d.c  mt_vector_2d.c  mt_vector_3d.c  mt_vector_4d.c
src/mt_math_test/: mt_math_2d_test.c
src/overview/: buffer.c  ipc.c  log.c  main.c  overview.c  overview_test.c  remote.c  waytest.c
src/overview/config/: fontconfig.c
src/overview/tree/: tree_drawer.c  tree_reader.c
src/sov/: config.c  draw.c  gen.c  jsmn.c  json.c  ku_bitmap_ext.c  kvlines.c  layout.c  main.c  sov.c  tree.c  tree_test.c
src/sov/config/: config.c  fontconfig.c
src/sov/json/: json.c
src/sov/tree/: tree_drawer.c  tree_reader.c
src/sov/utils/: bm_rgba_util.c  cstr_util.c
src/tests/: test_json.c
src/zen_core/: zc_bitmap.c  zc_bm_rgba.c  zc_cstring.c  zc_cstrpath.c  zc_log.c  zc_map.c  zc_path.c  zc_string.c  zc_vector.c
src/zen_gfx/: zc_draw.c  zc_text.c
tests/: wob_parse_input.c
tst/: a_tree.json  config_a  config_b  empty_6_workspace.json  feh_tree.json  feh_workspace.json  floating_tree.json  floating_workspace.json  rotated_workspace.json  runtests.sh  test_config_1  test_config_2  tree_b.json  tree_empty.json  tree_empty_6.json  tree_rotated_multi.json  tst_tree1.json  tst_tree2.json  tst_tree3.json  tst_ws1.json  tst_ws2.json  tst_ws3.json  workspace_a.json  workspace_b.json  workspace_empty.json
tst/stylea/html/: main.css
tst/styleb/html/: main.css  main.html
